# cif

./: .gitignore  Cargo.toml  README.md
assets/: diamond.cif
examples/: cif_file_to_struct.rs  phase_struct.rs  read_cif.rs
src/: lib.rs  parse.rs  parser.rs  phase.rs  read_cif.rs  symmetry.rs
tests/: test.rs
